--- a/Assignment.css
+++ b/Assignment.css
@@ -23,7 +23,7 @@ body{
     border-radius: 10px;
     padding: 20px;
     margin:20px;
-    background-image: url(cart-item-2.png);
+    background-image: url(./images/cart-item-2.png);
     background-repeat: no-repeat;
     background-position:  top 10px right 10px;
     box-shadow: rgba(17,12,46,0.5) 0px 48px 100px 0px;
